--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -51,6 +51,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <configuration>
+                    <skipDockerBuild>false</skipDockerBuild>
+                    <imageName>cub/article-service</imageName>
+                    <maintainer>rwinzinger</maintainer>
+                    <expose>8080</expose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
