--- a/pom.xml
+++ b/pom.xml
@@ -37,4 +37,31 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <!-- version>${docker.maven.plugin}</version -->
+                    <configuration>
+                        <skipDockerBuild>true</skipDockerBuild>
+                        <imageName>dummy-wont-be-used</imageName>
+                        <baseImage>java</baseImage>
+                        <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+                        <!-- copy the service's jar file from target into the root directory of the image -->
+                        <expose>8080</expose>
+                        <resources>
+                            <resource>
+                                <targetPath>/</targetPath>
+                                <directory>${project.build.directory}</directory>
+                                <include>${project.build.finalName}.jar</include>
+                            </resource>
+                        </resources>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
