dockerfile for customized nginx image added nginx to docker-compose added proxy settings to nginx to route requests to services added CORS override added "sendfile=off" to avoid corrupt files (Docker/Mac) changed service-internal URLs

--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -66,6 +66,10 @@ nginx:
    - /dev/urandom:/dev/random
    # find a better solution for this one
    - $HOME/dockermounts/cub-code-walkthrough/nginx/html:/etc/nginx/html
+  links:
+   - login-service:loginservice
+   - customer-service:customerservice
+   - article-service:articleservice
   ports:
-     # forward the nginx port through the vm to the host
-     - "10080:80"
+   # forward the nginx port through the vm to the host
+   - "10080:80"
