--- a/docker/images/nginx/nginx.conf
+++ b/docker/images/nginx/nginx.conf
@@ -63,6 +63,9 @@ http {
             #The location setting lets you configure how nginx responds to requests for resources within the server.
             root   html;
             index  index.html index.htm;
+            # we need "sendfile off" because we would otherwise sometimes send corrupt content running in Docker/Mac
+            sendfile off;
+            add_header Access-Control-Allow-Origin *;
         }
 
         #error_page  404              /404.html;
@@ -79,6 +82,16 @@ http {
         #location ~ \.php$ {
         #    proxy_pass   http://127.0.0.1;
         #}
+
+        location /loginsrv/api/v1 {
+            proxy_pass http://loginservice:8080;
+        }
+        location /customersrv/api/v1 {
+            proxy_pass http://customerservice:8080;
+        }
+        location /articlesrv/api/v1 {
+            proxy_pass http://articleservice:8080;
+        }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
