--- a/login-service/pom.xml
+++ b/login-service/pom.xml
@@ -37,6 +37,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.geteventstore</groupId>
+            <artifactId>eventstore-client_2.11</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>senacor.cub.samples</groupId>
+            <artifactId>technical</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
