--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,7 @@
         <module>customer-service</module>
         <module>technical</module>
         <module>article-service</module>
-        <!--
         <module>cart-service</module>
-        -->
     </modules>
 
     <properties>
@@ -54,6 +52,15 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>com.spotify</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
