added handling of cart-items in fe, minor tweaks in service

--- a/docker/images/nginx/nginx.conf
+++ b/docker/images/nginx/nginx.conf
@@ -65,7 +65,6 @@ http {
             index  index.html index.htm;
             # we need "sendfile off" because we would otherwise sometimes send corrupt content running in Docker/Mac
             sendfile off;
-            add_header Access-Control-Allow-Origin *;
         }
 
         #error_page  404              /404.html;
@@ -91,6 +90,9 @@ http {
         }
         location /articlesrv/api/v1 {
             proxy_pass http://articleservice:8080;
+        }
+        location /cartsrv/api/v1 {
+            proxy_pass http://cartservice:8080;
         }
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
