containers are created with debug option enabled on spring-boot startup

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                         <skipDockerBuild>true</skipDockerBuild>
                         <imageName>dummy-wont-be-used</imageName>
                         <baseImage>java</baseImage>
-                        <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+                        <entryPoint>["java", "-Xdebug", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
                         <!-- copy the service's jar file from target into the root directory of the image -->
                         <expose>8080</expose>
                         <resources>
